src/index.sass
@import "./sass/fonts"


// Bootstrap overrides
$font-family-sans-serif: "Cuprum Regular", Ubuntu, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
$font-size-base: 1.2rem
$primary: #8f3d86
$secondary: #e3addd
$headings-color: $primary
$jumbotron-bg: $secondary


@import './sass/bootstrap'


.jumbotron
  margin-bottom: 0
  border-radius: 0


// Project specific variables
$navbar-gap: 60px
$gap-size: 40px
$globe-height: 500px
$globe-message-top: 128px
$loading-indicator-item-size: 64px


// Project specific components
a[id]
  display: block
  position: relative
  top: -($navbar-gap + $gap-size / 2)


.navbar-gap
  height: $navbar-gap


.gap
  height: $gap-size


.gap-half
  height: $gap-size / 2


.restrictor
  height: 2px
  background-color: $primary


.globe
  position: relative
  width: 100%
  height: $globe-height
  background-color: $black

  & > canvas
    width: 100%
    height: $globe-height

  &.globe-loading
    & > canvas
      visibility: hidden


.globe-loading-indicator
  position: absolute
  top: $globe-message-top
  left: 0
  right: 0
  color: $white
  font-weight: bold
  text-align: center

  .globe:not(.globe-loading) &
    display: none


.globe-loading-indicator-item
  width: $loading-indicator-item-size
  height: $loading-indicator-item-size
  margin: 0 auto


.globe-error
  position: absolute
  top: $globe-message-top
  left: 0
  right: 0
  color: $red
  font-weight: bold
  text-align: center


.main-info
  display: flex
  flex-direction: row


.main-info-text
  display: flex
  flex-direction: column
  flex: 1

  > p
    text-align: justify


.main-info-photo
  display: flex
  border-radius: 85px
  margin-left: 30px
  border: 2px solid $primary
  box-shadow: 1px 1px 4px $gray-600

  @include media-breakpoint-down(md)
    display: none


.row
  &.row-live
    width: 400px
    margin: 0 auto


.contacts-photo
  margin: 0 auto
  display: block
  border-radius: 6px
  box-shadow: 1px 1px 4px $gray-600

  @include media-breakpoint-down(md)
    display: none

